Dataset Tiles Fixes #8
